[gd_scene load_steps=22 format=2]

[ext_resource path="res://levels/level 01/FishRentalService.gd" type="Script" id=1]
[ext_resource path="res://objects/Vehicle/Vehicle.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level 01/terrain/ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://levels/level 01/Collectible.gd" type="Script" id=5]
[ext_resource path="res://levels/level 01/Lap Marker.gd" type="Script" id=6]
[ext_resource path="res://objects/SplitscreenCamera/SplitscreenCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/level 01/StoplightAnimationPlayer.gd" type="Script" id=8]
[ext_resource path="res://levels/level 01/lap3.png" type="Texture" id=9]
[ext_resource path="res://levels/level 01/lap2.png" type="Texture" id=10]
[ext_resource path="res://levels/level 01/race_finished.png" type="Texture" id=11]
[ext_resource path="res://levels/level 01/BoostRing.gd" type="Script" id=12]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 4 )
uv1_triplanar = true
uv1_triplanar_sharpness = 55.7154

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SphereShape" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 31.6908, 21.478, 1 )

[sub_resource type="Animation" id=5]
resource_name = "Stoplight"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Light0:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.694118, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light1:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.956863, 0.85098, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0.45098, 0.254902, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("StoplightAnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "let_the_fish_swim"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "FinishedSign"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("race_finished_p2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 0, 1 ), Color( 1, 0, 1, 1 ), Color( 0, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("race_finished_p1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 3.99649 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 1, 1 ), Color( 1, 0, 1, 1 ), Color( 1, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve3D" id=7]
_data = {
"points": PoolVector3Array( -0.945583, -2.38419e-006, -1.27544, 0.945583, 2.38419e-006, 1.27544, 3.71637, -0.78515, -2.79277, 0.338323, 1.90735e-006, -1.12775, -0.338323, -1.90735e-006, 1.12775, 4.03734, -0.968196, 2.07506, 0.924754, -4.76837e-007, 1.39841, -0.924754, 4.76837e-007, -1.39841, -3.68797, -0.999789, 2.8449, -1.8044, -2.86102e-006, 1.26308, 1.8044, 2.86102e-006, -1.26308, -2.59382, -0.968196, -3.29303, 0, 0, 0, 0, 0, 0, 2.30061, -0.968196, -3.83435 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="SphereShape" id=8]

[node name="Level 1" type="Spatial"]

[node name="FishRentalService" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16.4188 )

[node name="floor" type="MeshInstance" parent="."]
transform = Transform( 6.12061, 0, 0, 0, 1, 0, 0, 0, 6.12061, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="vehicles" type="Node" parent="."]
editor/display_folded = true

[node name="vehicle1" parent="vehicles" groups=[
"vehicles",
] instance=ExtResource( 2 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -35.8057, -111.134 )

[node name="vehicle2" parent="vehicles" groups=[
"vehicles",
] instance=ExtResource( 2 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -35.8057, -111.134 )

[node name="Ship" parent="." instance=ExtResource( 3 )]
transform = Transform( -6.55671e-007, 0, 15, 0, 15, 0, -15, 0, -6.55671e-007, -24.7094, -47.4327, -280.337 )

[node name="Path Back" parent="Ship" index="2"]
transform = Transform( 0.676975, 0, -1.40082, 0, 0.112914, 0, 0.736006, 0, 1.28847, 4.61987, -0.100404, -3.37641 )

[node name="StaticBody" parent="Ship/Path Back" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, -2.98023e-008, 0, 1, 0, 0, 0 )

[node name="Path Front" parent="Ship" index="3"]
transform = Transform( 2.22542, -0.000121685, -0.476063, 0.00369353, 0.0584058, -0.00275942, 0.751805, 7.32585e-005, 1.40921, 18.511, 0.156798, -1.17619 )
material_override = SubResource( 9 )

[node name="Lights" type="Node" parent="."]
editor/display_folded = true

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]
transform = Transform( 0.990376, -0.0198939, 0.136966, -0.135592, 0.0589949, 0.989007, -0.0277555, -0.99806, 0.0557296, -7.31915, 173.5, -499.19 )
light_indirect_energy = 3.6

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 0.97989, -0.199538, 0, 0.199538, 0.97989, 6.37769, -32.2711, -160.67 )
light_color = Color( 1, 0.752941, 0, 1 )
omni_range = 48.0
omni_attenuation = 0.297302

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 0.97989, -0.199538, 0, 0.199538, 0.97989, 25.2534, 29.2086, -252.021 )
omni_range = 200.301

[node name="OmniLight4" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 0.97989, -0.199538, 0, 0.199538, 0.97989, -57.6927, -7.32077, -630.361 )
omni_range = 200.301

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Collectibles" type="Node" parent="."]
editor/display_folded = true

[node name="Collectible1" type="RigidBody" parent="Collectibles"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -35.4915, -129.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible1"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible1"]
shape = SubResource( 3 )

[node name="Collectible2" type="RigidBody" parent="Collectibles"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -34.4915, -135.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible2"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible2"]
shape = SubResource( 3 )

[node name="Collectible3" type="RigidBody" parent="Collectibles"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -33.4915, -141.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible3"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible3"]
shape = SubResource( 3 )

[node name="Collectible4" type="RigidBody" parent="Collectibles"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -32.4915, -146.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible4"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible4"]
shape = SubResource( 3 )

[node name="Collectible5" type="RigidBody" parent="Collectibles"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -31.4915, -151.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible5"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible5"]
shape = SubResource( 3 )

[node name="Collectible6" type="RigidBody" parent="Collectibles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67948, -30.4915, -156.869 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Collectibles/Collectible6"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Collectibles/Collectible6"]
shape = SubResource( 3 )

[node name="Lap Marker" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -34.2251, -115.849 )
script = ExtResource( 6 )

[node name="Lap Tracker 00" type="Area" parent="Lap Marker"]
editor/display_folded = true
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Lap Marker/Lap Tracker 00"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5373, 13.4098, -0.232544 )
shape = SubResource( 4 )

[node name="Lap Tracker 01" type="Area" parent="Lap Marker"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42747, -8.35034 )
visible = false

[node name="CollisionShape2" type="CollisionShape" parent="Lap Marker/Lap Tracker 01"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5373, 13.4098, -0.232544 )
shape = SubResource( 4 )

[node name="Lap Tracker 02" type="Area" parent="Lap Marker"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.36666, 12.1235 )
visible = false

[node name="CollisionShape2" type="CollisionShape" parent="Lap Marker/Lap Tracker 02"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5373, 13.4098, -0.232544 )
shape = SubResource( 4 )

[node name="SplitscreenCamera" parent="." instance=ExtResource( 7 )]

[node name="GUI" type="Node" parent="."]

[node name="Stoplight" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -90.0
margin_right = 46.0
margin_bottom = 90.0

[node name="Light0" type="ColorRect" parent="GUI/Stoplight"]
anchor_right = 1.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="Light1" type="ColorRect" parent="GUI/Stoplight"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 120.0
color = Color( 0, 0, 0, 1 )

[node name="Light2" type="ColorRect" parent="GUI/Stoplight"]
anchor_right = 1.0
margin_top = 120.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )

[node name="StoplightAnimationPlayer" type="AnimationPlayer" parent="GUI/Stoplight"]
anims/Stoplight = SubResource( 5 )
script = ExtResource( 8 )

[node name="LapMessages" type="Node" parent="GUI"]
editor/display_folded = true

[node name="lap3p1" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 226.908, 168.716 )
texture = ExtResource( 9 )

[node name="lap3p2" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 226.908, 168.716 )
texture = ExtResource( 9 )

[node name="lap2p2" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 747.001, 168.809 )
texture = ExtResource( 10 )

[node name="lap2p1" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 226.529, 171.253 )
texture = ExtResource( 10 )

[node name="race_finished_p1" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 225.803, 170.789 )
texture = ExtResource( 11 )

[node name="race_finished_p2" type="Sprite" parent="GUI/LapMessages"]
visible = false
position = Vector2( 743.018, 169.974 )
texture = ExtResource( 11 )

[node name="RaceFinishedSignAnimationPlayer" type="AnimationPlayer" parent="GUI/LapMessages"]
autoplay = "FinishedSign"
anims/FinishedSign = SubResource( 6 )

[node name="Racetrack" type="Spatial" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 56.7785, -31.6155, -65.3272 )

[node name="Path" type="Path" parent="Racetrack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00136566, 0.330706, 0.00197697 )
curve = SubResource( 7 )

[node name="Track" type="CSGPolygon" parent="Racetrack"]
use_collision = true
invert_faces = true
polygon = PoolVector2Array( 0.677853, -0.246742, -0.276672, -0.211423, -0.232018, 1.11084, 1.26076, 1.14437, 1.2643, -0.228819 )
mode = 2
path_node = NodePath("../Path")
path_interval = 1.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_joined = true

[node name="Track2" type="CSGPolygon" parent="Racetrack"]
use_collision = true
polygon = PoolVector2Array( 0.677853, -0.246742, -0.276672, -0.211423, -0.232018, 1.11084, 1.26076, 1.14437, 1.2643, -0.228819 )
mode = 2
path_node = NodePath("../Path")
path_interval = 1.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_joined = true

[node name="Boost Rings" type="Node" parent="."]
editor/display_folded = true

[node name="CSGCylinder" type="CSGCylinder" parent="Boost Rings"]
transform = Transform( 2.78262, 0, 0, 0, -8.36188e-009, 2.78262, 0, -0.0687474, -4.37114e-008, 0, -25.2047, -155.199 )
sides = 12

[node name="CSGCylinder2" type="CSGCylinder" parent="Boost Rings/CSGCylinder"]
transform = Transform( 0.933712, 0, 0, 0, 1.07358, 0, 0, 0, 0.933712, 0, 0, 0 )
operation = 2
sides = 12

[node name="Area" type="Area" parent="Boost Rings/CSGCylinder"]
transform = Transform( 1, 0, 0, 0, 1, -5.68434e-014, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Boost Rings/CSGCylinder/Area"]
shape = SubResource( 8 )

[connection signal="body_entered" from="Lap Marker/Lap Tracker 00" to="Lap Marker" method="_on_Lap_Tracker_00_body_entered"]
[connection signal="body_entered" from="Lap Marker/Lap Tracker 01" to="Lap Marker" method="_on_Lap_Tracker_01_body_entered"]
[connection signal="body_entered" from="Lap Marker/Lap Tracker 02" to="Lap Marker" method="_on_Lap_Tracker_02_body_entered"]

[editable path="vehicles/vehicle1"]

[editable path="vehicles/vehicle2"]

[editable path="Ship"]

[editable path="SplitscreenCamera"]
